added sorting view

--- a/projects/kiwi-suite/ngx-admin/src/lib/forms/types/component/link-selector.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/forms/types/component/link-selector.component.html
@@ -8,6 +8,10 @@
             <span class="badge badge-pill badge-secondary" *ngIf="linkValue.type === 'sitemap'">
                 {{ linkValue.type }}: {{ linkValue.value.name}} <button type="button" class="btn btn-link btn-sm" (click)="remove()"><span class="text-danger fa fa-close"></span></button>
             </span>
+
+            <span class="badge badge-pill badge-secondary" *ngIf="linkValue.type === 'external'">
+                {{ linkValue.type }}: {{ linkValue.value}} <button type="button" class="btn btn-link btn-sm" (click)="remove()"><span class="text-danger fa fa-close"></span></button>
+            </span>
         </ng-container>
 
         <button *ngIf="!linkValue" type="button" class="btn btn-sm btn-light" (click)="openModal(template)">Select</button>
@@ -35,7 +39,14 @@
             <sitemap-modal-list (onSelect)="onSelectPage($event)"></sitemap-modal-list>
         </ng-container>
         <ng-container *ngIf="selectedType === 'external'">
-            Test
+            <div class="input-group mb-3">
+                <input type="text" placeholder="Enter URL of external Link" class="form-control" (keyup)="onSelectExternal($event)">
+                <div class="input-group-append">
+                    <button class="btn btn-outline-secondary" type="button" (click)="closeModal()"><i class="fa fa-check"></i></button>
+                </div>
+            </div>
+
+
         </ng-container>
 
     </div>
