--- a/projects/kiwi-suite/ngx-admin/src/lib/views/page/components/sitemap-list.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/views/page/components/sitemap-list.component.html
@@ -12,21 +12,30 @@
     <ng-container *ngIf="data.items.length === 0">
         No Pages
     </ng-container>
-    <ng-container *ngIf="data.items.length > 0">
+    <div [ngClass]="{'drag-enabeled': dragPageTypes.length > 0}" *ngIf="data.items.length > 0">
         <sitemap-list-container [model]="data.items"
-                                (drop)="drop($event)"
+                                (drop)="drop($event, modal)"
+                                (drag)="drag($event)"
+                                (cancel)="cancel($event)"
+                                [dragPageType]="dragPageType$"
+                                [dropZones]="dragPageTypes"
                                 [locale]="selectedLocale">
         </sitemap-list-container>
-    </ng-container>
+    </div>
 </ng-container>
+
 <ng-template #modal>
     <div class="modal-header">
-        <h4 class="modal-title pull-left">Modal</h4>
-        <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
+        <h4 class="modal-title pull-left">Sort</h4>
+        <button type="button" class="close pull-right" aria-label="Close" (click)="dismiss()">
             <span aria-hidden="true">&times;</span>
         </button>
     </div>
     <div class="modal-body">
-        This is a modal.
+        You really want to change the sitemap sorting?
+    </div>
+    <div class="modal-footer">
+        <button type="button" class="btn btn-primary" (click)="sort()">Save sorting</button>
+        <button type="button" class="btn btn-secondary" (click)="dismiss()">Dismiss sorting</button>
     </div>
 </ng-template>
