--- a/projects/kiwi-suite/ngx-admin/src/lib/scss/_datatable.scss
+++ b/projects/kiwi-suite/ngx-admin/src/lib/scss/_datatable.scss
@@ -1,36 +1,28 @@
 /*
 bootstrap table theme
 */
+
 .ngx-datatable.bootstrap {
     box-shadow: none;
-
+    font-size: 13px;
     .datatable-header {
         height: unset !important;
-
         .datatable-header-cell {
-
             vertical-align: bottom;
             padding: 0.75rem;
             border-bottom: 1px solid #d1d4d7;
             font-weight: bold;
-
-            .resize-handle {
-                background: #d1d4d7;
-            }
-
             .datatable-header-cell-label {
                 line-height: 24px;
             }
         }
     }
-
     .datatable-body {
         .datatable-body-row {
-            vertical-align: top;
+            //vertical-align: top;
             border-top: 1px solid $gray-100;
             &.datatable-row-even {
                 background-color: lighten($primary, 48%);
-                //background-color: rgba(0, 0, 0, 0.05);
             }
             &.active {
                 background-color: $primary;
@@ -49,14 +41,13 @@ bootstrap table theme
             }
         }
     }
-
     .datatable-footer {
         //background: #424242;
         //color: #ededed;
         margin-top: -1px;
         .page-count {
             line-height: 50px;
-            padding: 0 0.6rem;
+            padding: 0 1.2rem;
         }
         .datatable-pager {
             margin: 0 10px;
@@ -68,7 +59,7 @@ bootstrap table theme
                         &.active,
                         &:hover {
                             a {
-                                //background-color: #545454;
+                                background-color: #545454;
                                 font-weight: bold;
                             }
                         }
@@ -85,7 +76,6 @@ bootstrap table theme
                 text-align: center;
                 vertical-align: top;
                 text-decoration: none;
-                vertical-align: bottom;
                 //color: #ededed;
             }
             .datatable-icon-left,
@@ -95,6 +85,15 @@ bootstrap table theme
                 font-size: 18px;
                 line-height: 27px;
                 padding: 0 3px;
+            }
+        }
+    }
+
+    // Summary row styles
+    .datatable-summary-row {
+        .datatable-body-row {
+            .datatable-body-cell {
+                font-weight: bold;
             }
         }
     }
