--- a/projects/kiwi-suite/ngx-admin/src/lib/views/user/user-index.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/views/user/user-index.component.html
@@ -3,7 +3,82 @@
         <ng-template #content>
             <div class="card card-accent-primary">
                 <div class="card-body">
-                    <user-list [dataService]="dataService"></user-list>
+                    <ngx-datatable
+                            class="bootstrap expandable"
+                            #dataTable
+                            [rows]="data.items"
+                            [loadingIndicator]="loadingIndicator"
+                            [columnMode]="'force'"
+                            [rowHeight]="'auto'"
+                            [headerHeight]="50"
+                            [footerHeight]="50"
+                            [limit]="limit"
+                            [reorderable]="reorderable">
+                        <!--(page)="onPage($event)"-->
+
+                        <ngx-datatable-column
+                                prop="avatar"
+                                [width]="50"
+                                [resizeable]="false"
+                                [sortable]="false"
+                                [draggable]="false"
+                                [canAutoResize]="false">
+                            <ng-template let-column="column" ngx-datatable-header-template>
+                    <span class="">
+                        <!--{{column.name}}-->
+                    </span>
+                            </ng-template>
+                            <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
+                    <span class="d-none d-md-block">
+                        <img style="width:24px;height:24px;" *ngIf="value"
+                             [src]="sanitizeUrl( value )" [alt]="row.name">
+                    </span>
+                            </ng-template>
+                        </ngx-datatable-column>
+
+                        <ngx-datatable-column prop="email" name="E-Mail">
+                            <ng-template let-column="column" ngx-datatable-header-template>
+                    <span class="">
+                        {{column.name}}
+                    </span>
+                            </ng-template>
+                            <ng-template let-value="value" ngx-datatable-cell-template>
+                    <span class="">
+                        {{value}}
+                    </span>
+                            </ng-template>
+                        </ngx-datatable-column>
+
+                        <ngx-datatable-column prop="role">
+                            <ng-template let-column="column" ngx-datatable-header-template>
+                    <span class="">
+                        {{column.name}}
+                    </span>
+                            </ng-template>
+                            <ng-template let-value="value" ngx-datatable-cell-template>
+                    <span class="badge badge-success">
+                        {{value | uppercase}}
+                    </span>
+                            </ng-template>
+                        </ngx-datatable-column>
+
+                        <ngx-datatable-column prop="id"
+                                              [resizeable]="false">
+                            <ng-template let-column="column" ngx-datatable-header-template>
+                    <span class="">
+                        {{column.id}}
+                    </span>
+                            </ng-template>
+                            <ng-template let-value="value" ngx-datatable-cell-template>
+                                <div class="text-right">
+                                    <a routerLink="/{{ resourceKey }}/{{ value }}/edit" class="btn btn-sm btn-primary"
+                                       *can="['admin.api.'+resourceKey+'.edit']">
+                                        <i class="fa fa-pencil"></i>
+                                    </a>
+                                </div>
+                            </ng-template>
+                        </ngx-datatable-column>
+                    </ngx-datatable>
                 </div>
             </div>
         </ng-template>
