full buttons in header

--- a/projects/kiwi-suite/ngx-admin/src/lib/views/page-flat/page-flat-create.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/views/page-flat/page-flat-create.component.html
@@ -17,7 +17,7 @@
 
             <ng-template #header>
                 <div class="btn-group btn-group-sm pull-right">
-                    <button type="submit" class="btn btn-outline-primary btn-sm">
+                    <button type="submit" class="btn btn-primary btn-sm">
                         <i class="fa fa-fw fa-save"></i>
                         <span>Create</span>
                     </button>
