--- a/projects/kiwi-suite/ngx-admin/src/lib/views/page-flat/page-flat-index.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/views/page-flat/page-flat-index.component.html
@@ -10,7 +10,7 @@
 
         <ng-template #header>
             <div class="btn-group btn-group-sm pull-right">
-                <a [routerLink]="['create', selectedLocale, data.meta.parent.id]" class="btn btn-outline-success btn-sm">
+                <a [routerLink]="['create', selectedLocale, data.meta.parent.id]" class="btn btn-success btn-sm">
                     <i class="fa fa-plus text-success"></i> Create
                 </a>
             </div>
