--- a/projects/kiwi-suite/ngx-admin/src/lib/views/page/page-index.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/views/page/page-index.component.html
@@ -10,8 +10,8 @@
 
         <ng-template #header>
             <div class="btn-group btn-group-sm pull-right">
-                <a [routerLink]="['create', selectedLocale]" *can="['admin.api.'+resourceKey+'.create']" class="btn btn-outline-success btn-sm">
-                    <i class="fa fa-plus text-success"></i> Create
+                <a [routerLink]="['create', selectedLocale]" *can="['admin.api.'+resourceKey+'.create']" class="btn btn-success btn-sm">
+                    <i class="fa fa-plus"></i> Create
                 </a>
             </div>
         </ng-template>
