--- a/projects/kiwi-suite/ngx-admin/src/lib/views/resource/resource-edit.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/views/resource/resource-edit.component.html
@@ -17,15 +17,15 @@
 
             <ng-template #header>
                 <div class="btn-group btn-group-sm pull-right">
-                    <button type="submit" class="btn btn-outline-primary btn-sm">
+                    <button type="submit" class="btn btn-primary btn-sm">
                         <i class="fa fa-fw fa-save"></i>
                         <span>Update</span>
                     </button>
-                    <button type="button" class="btn btn-outline-danger btn-sm"
+                    <button type="button" class="btn btn-danger btn-sm"
                             [disabled]="(loading$ | async)"
                             (click)="onDelete()"
                             *can="['admin.api.'+resourceKey+'.delete']">
-                        <i class="fa fa-trash"></i> Delete
+                        <i class="fa fa-fw fa-trash"></i> Delete
                     </button>
                 </div>
             </ng-template>
