--- a/projects/kiwi-suite/ngx-admin/src/lib/views/account/account.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/views/account/account.component.html
@@ -1,77 +1,48 @@
 <ng-container>
-    <div class="breadcrumb">
-        <div class="col">
-            <h6>Account</h6>
-        </div>
-    </div>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-8 col-lg-7">
-                <form [formGroup]="emailForm" (ngSubmit)="onSubmitEmail(emailFormModel)" *ngIf="emailForm" novalidate>
-                    <div class="card card-accent-primary">
-                        <div class="card-header">
-                            Email
-                        </div>
-                        <div class="card-body">
-                            <div class="form-group">
-                                <input type="text" class="form-control" placeholder="{{ account.email }}" readonly>
+    <app-content [title]="'Account'">
+        <ng-template #content>
+            <div class="card card-accent-primary">
+                <div class="card-body">
+                    <form [formGroup]="emailForm" (ngSubmit)="onSubmitEmail(emailFormModel)" *ngIf="emailForm" novalidate>
+                        <div class="card card-accent-primary">
+                            <div class="card-header">
+                                Email
                             </div>
-                            <formly-form [form]="emailForm" [fields]="emailFormFields" [model]="emailFormModel"></formly-form>
-
-                        </div>
-                        <div class="card-footer">
-                            <button type="submit" class="btn btn-primary">
-                                <i class="fa fa-save"></i>
-                                Update
-                            </button>
-                        </div>
-                    </div>
-                </form>
-
-                <form [formGroup]="passwordForm" (ngSubmit)="onSubmitPassword(passwordFormModel)" *ngIf="passwordForm" novalidate>
-                    <div class="card card-accent-primary">
-                        <div class="card-header">
-                            Password
-                        </div>
-                        <div class="card-body">
-                            <formly-form [form]="passwordForm" [fields]="passwordFormFields" [model]="passwordFormModel"></formly-form>
-                        </div>
-                        <div class="card-footer">
-                            <button type="submit" class="btn btn-primary">
-                                <i class="fa fa-save"></i>
-                                Update
-                            </button>
-                        </div>
-                    </div>
-                </form>
-            </div>
-            <!--
-            <div class="col-md-4 col-lg-6">
-                <form [formGroup]="avatarForm" (ngSubmit)="onSubmitAvatar()" *ngIf="avatarForm" novalidate>
-                    <div class="card card-accent-primary">
-                        <div class="card-header">
-                            Avatar
-                        </div>
-                        <div class="card-body">
+                            <div class="card-body">
                                 <div class="form-group">
-                                    <img style="width:64px;height:64px;" *ngIf="model.avatar"
-                                         [src]="sanitizeUrl('data:image/svg+xml;utf8,' + model.avatar )" [alt]="model.id">
+                                    <input type="text" class="form-control" placeholder="{{ account.email }}" readonly>
                                 </div>
-                                <div class="form-group">
-                                    <input type="hidden" name="avatar" formControlName="avatar">
-                                    <input type="file" (change)="onFileChange($event, 'avatar')" name="avatarFile">
-                                </div>
+                                <formly-form [form]="emailForm" [fields]="emailFormFields" [model]="emailFormModel"></formly-form>
+
+                            </div>
+                            <div class="card-footer">
+                                <button type="submit" class="btn btn-primary">
+                                    <i class="fa fa-save"></i>
+                                    Update
+                                </button>
+                            </div>
                         </div>
-                        <div class="card-footer">
-                            <button type="submit" class="btn btn-primary">
-                                <i class="fa fa-save"></i>
-                                Update
-                            </button>
+                    </form>
+
+                    <form [formGroup]="passwordForm" (ngSubmit)="onSubmitPassword(passwordFormModel)" *ngIf="passwordForm" novalidate>
+                        <div class="card card-accent-primary">
+                            <div class="card-header">
+                                Password
+                            </div>
+                            <div class="card-body">
+                                <formly-form [form]="passwordForm" [fields]="passwordFormFields" [model]="passwordFormModel"></formly-form>
+                            </div>
+                            <div class="card-footer">
+                                <button type="submit" class="btn btn-primary">
+                                    <i class="fa fa-save"></i>
+                                    Update
+                                </button>
+                            </div>
                         </div>
-                    </div>
-                </form>
+                    </form>
+                </div>
             </div>
-            -->
-        </div>
-    </div>
+        </ng-template>
+
+    </app-content>
 </ng-container>
