--- a/projects/kiwi-suite/ngx-admin/src/lib/views/page/page-edit.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/views/page/page-edit.component.html
@@ -36,12 +36,15 @@
 
         <ng-template #header>
             <div class="btn-group btn-group-sm pull-right">
-                <button type="button" class="btn btn-outline-danger btn-sm" *ngIf="false"
+                <button type="button" class="btn btn-danger btn-sm" *ngIf="data.meta.hasChildren === false"
                         [disabled]="(loading$ | async)"
                         (click)="showDeleteModal(deleteModal)">
                     <i class="fa fa-trash"></i> Delete
                 </button>
-                <button type="button" (click)="onSubmit()" class="btn btn-outline-primary btn-sm">
+                <button type="button" class="btn btn-outline-danger btn-sm" *ngIf="data.meta.hasChildren" popover="Can't delete pages with children!" placement="bottom">
+                    <i class="fa fa-trash"></i> Delete
+                </button>
+                <button type="button" (click)="onSubmit()" class="btn btn-primary btn-sm">
                     <i class="fa fa-fw fa-save"></i>
                     <span>Publish</span>
                 </button>
