--- a/projects/kiwi-suite/ngx-admin/src/lib/views/resource/resource-index.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/views/resource/resource-index.component.html
@@ -55,8 +55,8 @@
         <ng-template #header>
             <div class="btn-group btn-group-sm pull-right">
                 <a routerLink="/{{ resourcePathPrefix }}/{{ resourceKey }}/create"
-                   *can="['admin.api.'+resourceKey+'.create']" class="btn btn-outline-success btn-sm">
-                    <i class="fa fa-plus text-success"></i> Create
+                   *can="['admin.api.'+resourceKey+'.create']" class="btn btn-success btn-sm">
+                    <i class="fa fa-fw fa-plus"></i> Create
                 </a>
             </div>
         </ng-template>
