--- a/projects/kiwi-suite/ngx-admin/src/lib/views/resource/resource-index.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/views/resource/resource-index.component.html
@@ -3,12 +3,19 @@
         <ng-template #content>
             <div class="card card-accent-primary">
                 <div class="card-body">
+                    <!--
+                    <div class="row">
+                        <div class="form-group col-xs-12 col-sm-12 col-md-4 col-lg-4 offset-md-8 offset-lg-8">
+                            <input type="search" class="form-control form-control-sm" placeholder="Search" (keyup)="onSearch()">
+                        </div>
+                    </div>
+                    -->
                     <ngx-datatable
                             class="bootstrap expandable"
                             [rows]="data.items"
                             [columnMode]="'force'"
                             [rowHeight]="'auto'"
-                            [footerHeight]="100"
+                            [footerHeight]="'auto'"
                             [limit]="'10'"
                             [externalSorting]="true"
                             [externalPaging]="true"
@@ -41,8 +48,8 @@
 
                         <ngx-datatable-footer>
                             <ng-template ngx-datatable-footer-template let-rowCount="rowCount" let-pageSize="pageSize" let-selectedCount="selectedCount" let-curPage="curPage" let-offset="offset">
-                                <div style="flex: 1;">
-                                    <pagination *ngIf="rowCount > pageSize" [previousText]="'<'"  [nextText]="'>'" [boundaryLinks]="false" [directionLinks]="true" [maxSize]="10" [rotate]="true" [itemsPerPage]="pageSize" [totalItems]="rowCount" [ngModel]="curPage" (pageChanged)="onPage($event)"></pagination>
+                                <div style="flex: 1;" *ngIf="rowCount > pageSize">
+                                    <pagination [previousText]="'<'"  [nextText]="'>'" [boundaryLinks]="false" [directionLinks]="true" [maxSize]="10" [rotate]="true" [itemsPerPage]="pageSize" [totalItems]="rowCount" [ngModel]="currentPage" (pageChanged)="onPage($event)"></pagination>
                                 </div>
                             </ng-template>
 
