--- a/projects/kiwi-suite/ngx-admin/src/lib/views/page/components/sitemap-list.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/views/page/components/sitemap-list.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="data$ | async as data">
-    <div class="row" *ngIf="false">
+    <div class="row" *ngIf="locales.length > 1">
         <div class="col-sm-12 col-xs-12 col-md-3 col-lg-3 offset-md-9 offset-lg-9">
             <ng-select [items]="locales"
                        bindLabel="name"
