--- a/projects/kiwi-suite/ngx-admin/src/lib/views/page-flat/page-flat-index.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/views/page-flat/page-flat-index.component.html
@@ -3,6 +3,15 @@
         <ng-template #content>
             <div class="card card-accent-primary">
                 <div class="card-body">
+                    <div class="row" *ngIf="locales.length > 1">
+                        <div class="col-sm-12 col-xs-12 col-md-3 col-lg-3 offset-md-9 offset-lg-9">
+                            <ng-select [items]="locales"
+                                       bindLabel="name"
+                                       bindValue="locale"
+                                       [(ngModel)]="selectedLocale"
+                                       [clearable]="false"></ng-select>
+                        </div>
+                    </div>
                     <page-list [locale]="selectedLocale"></page-list>
                 </div>
             </div>
@@ -11,7 +20,7 @@
         <ng-template #header>
             <div class="btn-group btn-group-sm pull-right">
                 <a [routerLink]="['create', selectedLocale, data.meta.parent.id]" class="btn btn-success btn-sm">
-                    <i class="fa fa-plus text-success"></i> Create
+                    <i class="fa fa-plus"></i> Create
                 </a>
             </div>
         </ng-template>
