added quill line breaks

--- a/projects/kiwi-suite/ngx-admin/src/lib/scss/_custom.scss
+++ b/projects/kiwi-suite/ngx-admin/src/lib/scss/_custom.scss
@@ -1,6 +1,14 @@
 // Here you can add other styles
 
 // == background
+.ql-editor p {
+    margin-top: 10px;
+}
+
+p.linebreak-true {
+    margin-top: 0;
+}
+
 
 .background {
   position: fixed;
