added ol/ul styles for quill

--- a/projects/kiwi-suite/ngx-admin/src/lib/scss/_custom.scss
+++ b/projects/kiwi-suite/ngx-admin/src/lib/scss/_custom.scss
@@ -1,7 +1,7 @@
 // Here you can add other styles
 
 // == background
-.ql-editor p {
+.ql-editor p , .ql-editor ul, .ql-editor ol{
     margin-top: 10px;
 }
 
