--- a/projects/kiwi-suite/ngx-admin/src/lib/views/auth/login/login.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/views/auth/login/login.component.html
@@ -20,7 +20,7 @@
                     <div class="input-group-prepend">
                       <span class="input-group-text"><i class="fa fa-user"></i></span>
                     </div>
-                    <input formControlName="email" type="text" class="form-control" placeholder="Username" (keyup)="error = null">
+                    <input formControlName="username" type="text" class="form-control" placeholder="Username" (keyup)="error = null">
                   </div>
                   <div class="input-group mb-4">
                     <div class="input-group-prepend">
