--- a/projects/kiwi-suite/ngx-admin/src/lib/views/auth/login/login.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/views/auth/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="app-body">
-  <div class="app-body-background" *ngIf="appData.config.project" [style.backgroundImage]="'url(' + appData.config.project.background + ')'"></div>
+  <div class="app-body-background" *ngIf="appData.config.project.background" [style.backgroundImage]="'url(' + appData.config.project.background + ')'"></div>
   <main class="main d-flex align-items-center">
     <div class="container">
       <div class="row">
