--- a/projects/kiwi-suite/ngx-admin/src/lib/views/account/account.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/views/account/account.component.html
@@ -1,32 +1,40 @@
 <kiwi-content>
   <ng-container *ngIf="accountData.user$ | async as user">
-
-    <form [formGroup]="emailForm" (ngSubmit)="onSubmitEmail(emailFormModel)" *ngIf="emailForm" novalidate>
-      <div class="card card-accent-primary">
-        <div class="card-header">Change Email</div>
-        <div class="card-body">
-          <div class="form-group">
-            <input type="text" class="form-control" placeholder="{{ user.email }}" readonly>
+    <div class="row">
+      <div class="col-md">
+        <form [formGroup]="emailForm" (ngSubmit)="onSubmitEmail()">
+          <div class="card card-accent-primary">
+            <div class="card-header">Change Email</div>
+            <div class="card-body pb-1">
+              <div class="form-group">
+                <label>Your current email *</label>
+                <input type="text" class="form-control" placeholder="{{ user.email }}" readonly>
+              </div>
+              <formly-form [form]="emailForm" [fields]="emailFormFields"  [options]="emailFormOptions" [model]="emailFormModel"></formly-form>
+            </div>
+            <div class="card-footer text-right">
+              <button type="submit" class="btn btn-primary" [disabled]="!emailForm.valid">
+                <i class="fa fa-save"></i> Change Email
+              </button>
+            </div>
           </div>
-          <formly-form [form]="emailForm" [fields]="emailFormFields" [model]="emailFormModel"></formly-form>
-        </div>
-        <div class="card-footer">
-          <button type="submit" class="btn btn-primary"><i class="fa fa-save"></i> Change Email</button>
-        </div>
+        </form>
       </div>
-    </form>
-
-    <form [formGroup]="passwordForm" (ngSubmit)="onSubmitPassword(passwordFormModel)" *ngIf="passwordForm" novalidate>
-      <div class="card card-accent-primary">
-        <div class="card-header">Change Password</div>
-        <div class="card-body">
-          <formly-form [form]="passwordForm" [fields]="passwordFormFields" [model]="passwordFormModel"></formly-form>
-        </div>
-        <div class="card-footer">
-          <button type="submit" class="btn btn-primary"><i class="fa fa-save"></i> Change Password</button>
-        </div>
+      <div class="col-md">
+        <form [formGroup]="passwordForm" (ngSubmit)="onSubmitPassword()">
+          <div class="card card-accent-primary">
+            <div class="card-header">Change Password</div>
+            <div class="card-body pb-1">
+              <formly-form [form]="passwordForm" [fields]="passwordFormFields" [options]="passwordFormOptions" [model]="passwordFormModel"></formly-form>
+            </div>
+            <div class="card-footer text-right">
+              <button type="submit" class="btn btn-primary" [disabled]="!passwordForm.valid">
+                <i class="fa fa-save"></i> Change Password
+              </button>
+            </div>
+          </div>
+        </form>
       </div>
-    </form>
-
+    </div>
   </ng-container>
 </kiwi-content>
