--- a/projects/kiwi-suite/ngx-admin/src/lib/components/kiwi-content/kiwi-content.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/components/kiwi-content/kiwi-content.component.html
@@ -1,15 +1,10 @@
-<div class="page-header" #header>
+<div class="page-title" #header>
   <ol class="breadcrumb">
     <app-breadcrumb></app-breadcrumb>
-    <li class="breadcrumb-menu d-md-down-none">
-      <ng-content select="[headerButtons]"></ng-content>
-      <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
-        <a class="btn" href="#"><i class="icon-speech"></i></a>
-        <a class="btn" [routerLink]="['/dashboard']"><i class="icon-graph"></i> &nbsp;Dashboard</a>
-        <a class="btn" href="#"><i class="icon-settings"></i> &nbsp;Settings</a>
-      </div>
-    </li>
   </ol>
+  <div class="page-title-buttons">
+    <ng-content select="[headerButtons]"></ng-content>
+  </div>
 </div>
 <div class="container-fluid" [style.paddingTop]="headerHeight + 'px'">
   <ng-content></ng-content>
