--- a/projects/kiwi-suite/ngx-admin/src/lib/views/account/account.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/views/account/account.component.html
@@ -1,4 +1,13 @@
 <kiwi-content>
+  <div headerButtons>
+    <button class="btn btn-primary">
+      <i class="fa fa-save"></i> Edit
+    </button>
+    <button class="btn btn-danger">
+      <i class="fa fa-save"></i> Delete
+    </button>
+  </div>
+
   <ng-container *ngIf="accountData.user$ | async as user">
     <div class="row">
       <div class="col-md">
