--- a/projects/kiwi-suite/ngx-admin/src/scss/_layout.scss
+++ b/projects/kiwi-suite/ngx-admin/src/scss/_layout.scss
@@ -1,3 +1,7 @@
+.main .container-fluid {
+  padding: 0 25px;
+}
+
 .app-body-background {
   position: absolute;
   top: 0;
@@ -7,4 +11,66 @@
   background-size: cover;
   background-position: center center;
   z-index: -1;
+}
+
+.page-title {
+  background-color: $title-container-background;
+  @include border-radius($breadcrumb-border-radius);
+  @include borders($breadcrumb-borders);
+  position: fixed;
+  top: $navbar-height;
+  right: 0;
+  left: 0;
+  z-index: $zindex-sticky - 3;
+  transition: left $layout-transition-speed, right $layout-transition-speed, width $layout-transition-speed;
+  display: flex;
+  align-items: center;
+
+  .breadcrumb {
+    border: 0;
+    margin-bottom: 0;
+  }
+
+  .page-title-buttons {
+    flex: 1;
+    text-align: right;
+    padding: 7px 15px;
+
+    .btn {
+      margin-left: 5px;
+    }
+  }
+}
+
+@each $breakpoint in map-keys($grid-breakpoints) {
+  @include media-breakpoint-up($breakpoint) {
+    $infix: breakpoint-infix($breakpoint, $grid-breakpoints);
+    html:not([dir="rtl"]) {
+      .sidebar#{$infix}-show {
+        @include media-breakpoint-up(sm) {
+          .page-title {
+            left: $sidebar-width;
+          }
+          &.sidebar-compact {
+            .page-title {
+              left: $sidebar-compact-width;
+            }
+          }
+          &.sidebar-minimized {
+            .page-title {
+              left: $sidebar-minimized-width;
+            }
+          }
+        }
+      }
+
+      .aside-menu#{$infix}-show {
+        @include media-breakpoint-up(sm) {
+          .page-title {
+            right: $aside-menu-width;
+          }
+        }
+      }
+    }
+  }
 }
