--- a/projects/kiwi-suite/ngx-admin/src/scss/_layout.scss
+++ b/projects/kiwi-suite/ngx-admin/src/scss/_layout.scss
@@ -2,6 +2,28 @@
   padding: 0 25px;
 }
 
+.aside-menu {
+  top: $navbar-height;
+
+  .nav-tabs {
+    position: relative;
+    z-index: 1;
+    border-color: #c8ced3;
+    background: #f9f9f9;
+
+    .nav-link {
+      border: 1px solid $border-color;
+      border-top: 0;
+      border-left: 0;
+      color: rgba(0, 0, 0, .2);
+
+      &.active {
+        border-bottom-color: #fff;
+      }
+    }
+  }
+}
+
 .app-body-background {
   position: absolute;
   top: 0;
