--- a/projects/kiwi-suite/ngx-admin/src/lib/views/account/account.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/views/account/account.component.html
@@ -1,4 +1,6 @@
 <kiwi-content>
+  fdsafdsa
+
   <ng-container *ngIf="accountData.user$ | async as user">
     <div class="row">
       <div class="col-md">
