--- a/projects/kiwi-suite/ngx-admin/src/lib/components/kiwi-content/kiwi-content.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/components/kiwi-content/kiwi-content.component.html
@@ -2,16 +2,17 @@
   <ol class="breadcrumb">
     <app-breadcrumb></app-breadcrumb>
   </ol>
-  <div class="page-title-buttons">
-    <ng-content select="[headerButtons]"></ng-content>
+  <div class="page-title-buttons" *ngIf="headerButtons">
+    <ng-container *ngTemplateOutlet="headerButtons"></ng-container>
   </div>
 </div>
+
 <div class="container-fluid" [style.paddingTop]="headerHeight + 'px'">
   <div class="animated fadeIn">
     <ng-content></ng-content>
   </div>
 </div>
 
-<kiwi-aside>
-  <ng-content select="[aside]"></ng-content>
+<kiwi-aside *ngIf="aside">
+  <ng-container *ngTemplateOutlet="aside"></ng-container>
 </kiwi-aside>
