--- a/projects/kiwi-suite/ngx-admin/src/lib/views/page/page.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/views/page/page.component.html
@@ -1,5 +1,7 @@
 <kiwi-content>
-  PAGE
+  <ng-template #headerButtons>
+    <button class="btn btn-primary">Save</button>
+  </ng-template>
 
   fdsa<br>fdsa<br>fdsa<br>fdsa<br>fdsa<br>fdsa<br>fdsa<br>fdsa<br>fdsa<br>fdsa<br>fdsa<br>fdsa<br>
   fdsa<br>fdsa<br>fdsa<br>fdsa<br>fdsa<br>fdsa<br>fdsa<br>fdsa<br>fdsa<br>fdsa<br>fdsa<br>fdsa<br>
@@ -13,7 +15,7 @@
   fdsa<br>fdsa<br>fdsa<br>fdsa<br>fdsa<br>fdsa<br>fdsa<br>fdsa<br>fdsa<br>fdsa<br>fdsa<br>fdsa<br>
   fdsa<br>fdsa<br>fdsa<br>fdsa<br>fdsa<br>fdsa<br>fdsa<br>fdsa<br>fdsa<br>fdsa<br>fdsa<br>fdsa<br>
 
-  <div aside>
+  <ng-template #aside>
     <tabset>
       <tab>
         <ng-template tabHeading>
@@ -32,5 +34,5 @@
         </div>
       </tab>
     </tabset>
-  </div>
+  </ng-template>
 </kiwi-content>
