--- a/projects/kiwi-suite/ngx-admin/src/lib/containers/default-layout/default-layout.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/containers/default-layout/default-layout.component.html
@@ -8,7 +8,7 @@
   <ul class="nav navbar-nav ml-auto pr-2">
     <li class="nav-item dropdown" dropdown placement="bottom right" *ngIf="accountData.user$ | async as user">
       <a class="nav-link" data-toggle="dropdown" href="#" role="button" dropdownToggle (click)="false">
-        <img [src]="user.avatar" class="img-avatar" [alt]="user.email"/>
+        <div class="header-email">{{ user.email }}</div>
       </a>
       <div class="dropdown-menu dropdown-menu-right" *dropdownMenu>
         <div class="dropdown-header text-center"><strong>Settings</strong></div>
